feat: add IPFS BIS server and fix Docker host resolution
- Add ipfs_bis_server.js: real BIS that uploads document metadata
  to IPFS node at 10.211.171.140:5001 (replaces mock server)
- Add extra_hosts to docker-compose.yml for host.docker.internal
  resolution on Linux (fixes cURL error 7 connectivity issue)

--- a/docker/development-easy/docker-compose.yml
+++ b/docker/development-easy/docker-compose.yml
@@ -27,6 +27,8 @@ services:
   openemr:
     restart: always
     image: openemr/openemr:flex
+    extra_hosts:
+    - "host.docker.internal:host-gateway"
     ports:
     - 8300:80
     - 9300:443
